--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ google-generativeai
 langchain # For RAG
 langchain-google-genai # For Gemini embeddings & chat models
 langchain_chroma
+langchain_community
 chromadb # For vector store (will use SQLite backend)
 pypdf # For PDF parsing
+pydantic
 python-docx # Optional, for Word docs
 SQLAlchemy # For database ORM
 aiosqlite # Async driver for SQLite
